--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ h1 {
   padding: 15px 0px;
   margin: 0px 450px;
   border-radius: 10%;
+  cursor: pointer;
+}
+.button:hover {
+  background-color: #c57f41;
+  color: #6b4524;
 }
 .backbrown {
   background-color: #926239;
